--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -22,7 +22,7 @@
  </div>
 
   <div class="jumbotron text-center">
-    <h1>'Allo, 'Allo!</h1>
+    <h1>{{ main.question }}</h1>
     <p class="lead">
       <img src="assets/images/yeoman.png" alt="I'm Yeoman"><br>
       Always a pleasure scaffolding your apps.
