--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -7,16 +7,35 @@
 <div class="page-header">
   <h3>{{ main.question }}</h3>
 </div>
+
+<div class="container">
+
+    <div class="navbar-header">
+      <a href="/" class="navbar-brand">Visualizacion:</a>
+    </div>
+    <nav id="bs-navbar" class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li class="active">
+          <li ui-sref-active="active"><a ui-sref="home.chart({type: 'line'})">Linea</a></li>
+          <li ui-sref-active="active"><a ui-sref="home.chart({type: 'other'})">contacts.list</a></li>
+          <li ui-sref-active="active"><a ui-sref="prueba.list">prueba.list</a></li>
+        </li>
+        <li>
+          <a href="../components/">Components</a>
+        </li>
+        <li>
+          <a href="../javascript/">JavaScript</a>
+        </li>
+        <li>
+          <a href="../customize/">Customize</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+
   <div class="jumbotron text-center">
        <div class="row">
-      <div class="col-sm-12 col-md-12" id="chosen-wrapper">
-        <canvas id="line" class="chart chart-line"
-                chart-data="main.data"
-                chart-labels="main.labels"
-                chart-legend="true"
-                chart-series="main.series"
-                chart-click="main.onClick">
-        </canvas>
+          <div ui-view></div>
      </div>
    </div>
   </div>
