Add: chart bar.

--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -8,7 +8,7 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
       <ul class="nav navbar-nav">
-        <li ui-sref-active="active"><a ui-sref="home.chart({type: 'line'})">Home</a></li>
+        <li ui-sref-active="active"><a ui-sref="home.chart">Home</a></li>
         <li ui-sref-active="active"><a ui-sref="#">About</a></li>
         <li ui-sref-active="active"><a ui-sref="#">Contact</a></li>
         <li ui-sref-active="active"><a ui-sref="depExamples">depExamples</a></li>
