--- a/src/app/main/main.chart.bar.html
+++ b/src/app/main/main.chart.bar.html
@@ -1,5 +1,5 @@
 <div class="col-sm-12 col-md-12" id="chosen-wrapper">
-  <canvas id="line" class="chart chart-line"
+  <canvas id="bar" class="chart chart-bar"
           chart-data="chart.chartProps.data"
           chart-labels="chart.chartProps.labels"
           chart-legend="true"
