--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -17,7 +17,7 @@
       <ul class="nav navbar-nav">
         <li class="active">
           <li ui-sref-active="active"><a ui-sref="home.chart({type: 'line'})">Linea</a></li>
-          <li ui-sref-active="active"><a ui-sref="home.chart({type: 'other'})">contacts.list</a></li>
+          <li ui-sref-active="active"><a ui-sref="home.chart({type: 'bar'})">Barras</a></li>
           <li ui-sref-active="active"><a ui-sref="prueba.list">prueba.list</a></li>
         </li>
         <li>
@@ -32,7 +32,7 @@
       </ul>
     </nav>
   </div>
-
+<div class="container">
   <div class="jumbotron text-center">
        <div class="row">
           <div ui-view></div>
@@ -57,4 +57,5 @@
     </div>
   </div>
 
+</div>
 </div>
