--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -44,6 +44,12 @@ $icon-font-path: "../../bower_components/bootstrap-sass/assets/fonts/bootstrap/"
     color: #463265;
     background-color: #eeeeee;
 }
+.doughnut-legend li{
+    width: 260px;
+    text-align: left;
+    margin-left: auto;
+    margin-right: auto;
+}
 /**
  *  Do not remove the comments below. It's the markers used by gulp-inject to inject
  *  all your sass files automatically
