--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -18,6 +18,7 @@
         <li class="active">
           <li ui-sref-active="active"><a ui-sref="home.chart({type: 'line'})">Linea</a></li>
           <li ui-sref-active="active"><a ui-sref="home.chart({type: 'bar'})">Barras</a></li>
+          <li ui-sref-active="active"><a ui-sref="home.chart({type: 'doughnut'})">Dona</a></li>
           <li ui-sref-active="active"><a ui-sref="prueba.list">prueba.list</a></li>
         </li>
         <li>
