--- a/src/app/main/main.chart.doughnut.html
+++ b/src/app/main/main.chart.doughnut.html
@@ -8,7 +8,7 @@
       </canvas>
   </div>
   <div class="col-sm-6 col-md-6">
-    <p class="text-info"># Porcentaje:</p>
+    <p class="text-info">Porcentaje:</p>
     <canvas id="doughnut" class="chart chart-doughnut"
       chart-data="chart.chartProps.percentage"
       chart-legend="true"
