Add: polar-area chart.

--- a/src/app/main/main.chart.bar.html
+++ b/src/app/main/main.chart.bar.html
@@ -4,6 +4,6 @@
           chart-labels="chart.chartProps.labels"
           chart-legend="true"
           chart-series="chart.chartProps.series"
-          chart-click="main.onClick">
+          chart-click="main.onClick" height="100">
   </canvas>
 </div>
