--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -19,6 +19,7 @@
           <li ui-sref-active="active"><a ui-sref="home.chart({type: 'line'})">Linea</a></li>
           <li ui-sref-active="active"><a ui-sref="home.chart({type: 'bar'})">Barras</a></li>
           <li ui-sref-active="active"><a ui-sref="home.chart({type: 'doughnut'})">Dona</a></li>
+          <li ui-sref-active="active"><a ui-sref="home.chart({type: 'polar-area'})">Area</a></li>
           <li ui-sref-active="active"><a ui-sref="prueba.list">prueba.list</a></li>
         </li>
         <li>
