--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -50,6 +50,16 @@ $icon-font-path: "../../bower_components/bootstrap-sass/assets/fonts/bootstrap/"
     margin-left: auto;
     margin-right: auto;
 }
+.polararea-legend li{
+    width: 260px;
+    text-align: left;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.jumbotron{
+
+}
 /**
  *  Do not remove the comments below. It's the markers used by gulp-inject to inject
  *  all your sass files automatically
