--- a/src/app/main/main.chart.line.html
+++ b/src/app/main/main.chart.line.html
@@ -1,3 +1,6 @@
+<div id="chosen-wrapper" class="col-sm-12 col-md-12">
+  <div ui-view="chosen"></div>
+</div>
 <div class="col-sm-12 col-md-12" id="chosen-wrapper">
   <canvas id="line" class="chart chart-line"
           chart-data="chart.chartProps.data"
