--- a/src/app/main/main.chart.polar-area.html
+++ b/src/app/main/main.chart.polar-area.html
@@ -1,3 +1,7 @@
+<div id="chosen-wrapper" class="col-sm-12 col-md-12">
+  <div ui-view="chosen"></div>
+</div>
+
 <div class="row">
     <div class="col-sm-6 col-md-6" >
       <p class="text-info"># Respuestas:</p>
