--- a/src/app/main/main.chart.radar.html
+++ b/src/app/main/main.chart.radar.html
@@ -1,3 +1,8 @@
+
+<div id="chosen-wrapper" class="col-sm-12 col-md-12">
+  <div ui-view="chosen"></div>
+</div>
+
 <div class="row">
     <div class="col-sm-12 col-md-12" >
         <canvas  id="radar" class="chart chart-radar"
